[package]
name = "derive_constructors"
version = "1.0.1"
edition = "2021"
authors = ["Jorge Rico Vivas <jorgericoinformatic@gmail.com>"]
description = "Deriving From, TryFrom and create new_with_*args* functions."
repository = "https://github.com/JorgeRicoVivas/derive_constructors"
keywords = ["constructor","derive","from","tryfrom"]
categories = ["rust-patterns"]
license-file = "../LICENSE"
readme = "../README.md"

[lib]
crate-type = ["lib"]

[dependencies]
derive_constructors_proc = { version = "1.0.0", path = "../derive_constructors_proc" }