[package]
name = "derive_constructors_proc"
version = "1.0.0"
edition = "2021"
authors = ["Jorge Rico Vivas <jorgericoinformatic@gmail.com>"]
description = "Deriving From, TryFrom and create new_with_*args* functions."
repository = "https://github.com/JorgeRicoVivas/derive_constructors"
keywords = ["constructor","derive","from","tryfrom"]
categories = ["rust-patterns"]
license-file = "../LICENSE"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["extra-traits"] }
proc-macro2 = { version = "1.0.78", features = [] }
quote = { version = "1.0.35", features = [] }
convert_case = "0.6.0"